--- a/agrivall/static/css/tema.css
+++ b/agrivall/static/css/tema.css
@@ -45,6 +45,8 @@ html::-webkit-scrollbar{
 
     --radius: 1.5rem;
     --small-radius: 0.5rem;
+
+    --main-width: min(1400px, 92%)
 }
 
 /* quitar decoración de anchors */
